--- a/execicios/ex022 (imagens de fundo)/fundo006.html
+++ b/execicios/ex022 (imagens de fundo)/fundo006.html
@@ -3,19 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 98vh;
+            
+            /*
             background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            Shorthand - Background
+                color > image > position > repeat > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 500px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +37,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos minus, beatae quia culpa earum molestias. Doloribus quod ducimus consequuntur deserunt reprehenderit nisi repellat magnam eligendi aspernatur veritatis delectus, iste fugit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis libero atque doloribus dolor quae eos suscipit? Ullam odio sapiente vel modi enim sed. Veniam harum non temporibus alias, explicabo tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis perferendis fuga dolores praesentium enim unde assumenda similique explicabo doloremque id earum delectus reprehenderit non, natus laborum? Libero accusamus officiis quidem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos minus, beatae quia culpa earum molestias. Doloribus quod ducimus consequuntur deserunt reprehenderit nisi repellat magnam eligendi aspernatur veritatis delectus, iste fugit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis libero atque doloribus dolor quae eos suscipit? Ullam odio sapiente vel modi enim sed. Veniam harum non temporibus alias, explicabo tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis perferendis fuga dolores praesentium enim unde assumenda similique explicabo doloremque id earum delectus reprehenderit non, natus laborum? Libero accusamus officiis quidem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos minus, beatae quia culpa earum molestias. Doloribus quod ducimus consequuntur deserunt reprehenderit nisi repellat magnam eligendi aspernatur veritatis delectus, iste fugit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis libero atque doloribus dolor quae eos suscipit? Ullam odio sapiente vel modi enim sed. Veniam harum non temporibus alias, explicabo tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis perferendis fuga dolores praesentium enim unde assumenda similique explicabo doloremque id earum delectus reprehenderit non, natus laborum? Libero accusamus officiis quidem.</p>      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos minus, beatae quia culpa earum molestias. Doloribus quod ducimus consequuntur deserunt reprehenderit nisi repellat magnam eligendi aspernatur veritatis delectus, iste fugit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis libero atque doloribus dolor quae eos suscipit? Ullam odio sapiente vel modi enim sed. Veniam harum non temporibus alias, explicabo tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis perferendis fuga dolores praesentium enim unde assumenda similique explicabo doloremque id earum delectus reprehenderit non, natus laborum? Libero accusamus officiis quidem.</p>     
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos minus, beatae quia culpa earum molestias. Doloribus quod ducimus consequuntur deserunt reprehenderit nisi repellat magnam eligendi aspernatur veritatis delectus, iste fugit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis libero atque doloribus dolor quae eos suscipit? Ullam odio sapiente vel modi enim sed. Veniam harum non temporibus alias, explicabo tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis perferendis fuga dolores praesentium enim unde assumenda similique explicabo doloremque id earum delectus reprehenderit non, natus laborum? Libero accusamus officiis quidem.</p>
     </main>
     
