--- a/desafios/desafio014/tabela.html
+++ b/desafios/desafio014/tabela.html
@@ -45,10 +45,10 @@
     <table>
         <thead>
             <tr>
-                <th rowspan="2">Área</th>
-                <th rowspan="2">Disciplinas</th>
-                <th colspan="2">Notas</th>
-                <th rowspan="2">Média</th>
+                <th rowspan="2" scope="col">Área</th>
+                <th rowspan="2" scope="col">Disciplinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2" scope="col">Média</th>
             </tr>
             <tr>
                 <th>Nota 1</th>
@@ -57,7 +57,7 @@
         </thead>
         <tbody>
             <tr>
-                <th rowspan="4">Exatas</th>
+                <th rowspan="4" scope="rowgroup">Exatas</th>
                 <td>Matemática</td>
                 <td class="num">0.0</td>
                 <td class="num">0.0</td>
@@ -82,11 +82,11 @@
                 <td class="num">0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="medias">Médias de Exatas</th>
+                <th colspan="4" class="medias" scope="row">Médias de Exatas</th>
                 <td class="num mediasnum">0.0</td>
             </tr>
             <tr>
-                <th rowspan="2">Humanas</th>
+                <th rowspan="2" scope="rowgroup">Humanas</th>
                 <td>História</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -99,7 +99,7 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="medias">Médias de Humanas</th>
+                <th colspan="4" class="medias" scope="row">Médias de Humanas</th>
                 <td class="num mediasnum">0.0</td>
             </tr>
         </tbody>
