--- a/execicios/ex026 (media-queries)/mq005/index.html
+++ b/execicios/ex026 (media-queries)/mq005/index.html
@@ -7,9 +7,10 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
             <span id="burger" class="material-symbols-rounded" onclick="clickMenu()">menu</span>
@@ -48,6 +49,13 @@
            } else {
                 itens.style.display = 'block'
            }
+        }
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
         }
     </script>
 
